--- a/styles/default-styles.css
+++ b/styles/default-styles.css
@@ -480,14 +480,9 @@ main {
 }
 
 .notice {
-  padding: 1.3rem 0.6rem 0 0.6rem;
-  margin-top: 1.5rem;
-  margin-bottom: 0.5rem;
-  border-radius: 0 4px 4px 0;
-  max-width: 600px;
-  width: 100%;
+  visibility: hidden;
 }
- 
+
 .discord-link {
   text-decoration: none;
   transition: all 0.2s ease;
