--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -121,6 +121,25 @@
   .center-content {
     margin-bottom: 70px !important;
   }
+
+  /* Index styling */
+
+  .notice {
+    visibility: visible !important;
+    border-radius: 0 4px 4px 0;
+    max-width: 500px;
+    width: 100%;
+    text-transform: uppercase;
+    background-color: rgba(247, 61, 114, 0.2);
+    border-left: 3px solid var(--spectre-pink);
+  }
+  
+  .notice p {
+    font-size: 1rem;
+    font-weight: bold;
+    color: #f2f2f2;
+    padding: 0.5rem 0;
+  }
 }
 
 @media screen and (max-width: 650px) {
