Added webp thumnails and opacity fix check

--- a/styles/S0_style.css
+++ b/styles/S0_style.css
@@ -32,6 +32,8 @@ body::before {
   z-index: 0;
 }
 
+#logo-image { opacity: 1;}
+
 /* Prevent background image on index page */
 .index-body::before {
   background-image: none;
