--- a/styles/S0_style.css
+++ b/styles/S0_style.css
@@ -32,7 +32,10 @@ body::before {
   z-index: 0;
 }
 
-#logo-image { opacity: 1;}
+/* Ensuring full opacity for logo image */
+#logo-image { 
+  opacity: 1 !important; 
+}
 
 /* Prevent background image on index page */
 .index-body::before {
