--- a/styles/default-styles.css
+++ b/styles/default-styles.css
@@ -29,18 +29,6 @@ h1 {
   font-size: 0rem;
   margin: 0.5rem 0;
 }
-<<<<<<< HEAD
-
-#logo-image {
-  position: relative;
-  max-width: 850px;
-  height: auto;
-  object-fit: contain;
-  display: block;
-  margin: 0 auto;
-}
-=======
->>>>>>> 4f5ed53 (Update)
 
 /* Layout Structure */
 .game-layout {
@@ -455,14 +443,13 @@ main {
 }
  
 .welcome-container {
-  max-width: 850px;
-  width: 100%;
+  max-width: 700px;
   display: flex;
   flex-direction: column;
   align-items: center;
   border-radius: 12px;
   padding-top: 1rem;
-  margin: 0 auto 1rem auto;
+  margin-bottom: 1rem;
 }
 
 .welcome-header {
@@ -483,9 +470,6 @@ main {
 
 .notice {
   visibility: hidden;
-  max-width: 850px;
-  width: 100%;
-  margin: 0 auto;
 }
 
 .discord-link {
