--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.cdnfonts.com/css/din-condensed");
 @import "tailwindcss";
+@source "../";
+/* Limit tailwind to our app code to prevent it from scanning thousands of images in static/assets and crashing Vite memory */
 
 @theme {
   --color-spectre: #FFCB00;
